#ifndef CPP_PATTERNS_DECORATIONDBCONNECTION_H
#define CPP_PATTERNS_DECORATIONDBCONNECTION_H

#include "DbConnection.h"
class DecorationDbConnection : public DbConnection
{

};
#endif //CPP_PATTERNS_DECORATIONDBCONNECTION_H
